# org

./: .gitignore  .org  CLA.md  LICENSE  PKGBUILD  README.md  README_draft.md  README_draft.md~  REMINDER.md  TODO.md  ]  _issues.txt  _todos.td  app.py  device_setup.py  example_orgrc.py  log.txt  main.py  notes.md  pyproject.toml  requirements.txt  setup.py  simplified_check.py  test_log.txt  todos.td  tree.txt
.ccls-cache/@@home@benjamin@org/: @usr@include@alloca.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  (+41 more)
.config/: orgrc.py
borg/: cli.py
cli/: cli_functions.py
creation/: creation_val.py
examples_org/: routines.csv
hooks/: post-receive  post-receive.sh  pre-commit
main/: device_setup.py  main.py
org/: cli.py  my_logger.py  setup.py  tidy.py  views.py
scripts/: cli.py  device_setup.py  git_hooks.py  pre-commit  validation.py  views.py  yaml_val.py
temporary/: REMINDER.md  example_orgrc.py
validation/: validation_functions.py  validation_script.py  yaml_val.py  yaml_val_functions.py
(+186 files in other folders)
