[build-system]
requires = [
  "setuptools>=65.5.1",
  "wheel",
  "packaging"
]
build-backend = "setuptools.build_meta"

[project]
name = "org-cli"
version = "0.1.0"
description = "Text-first notes/todos/events CLI tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Benjamin Hammond" }]
requires-python = ">=3.11"
dependencies = [
  "rich>=13",
]

[project.scripts]
org = "org.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
