[build-system]
requires = ["setuptools>=65.5.1", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "org"
version = "0.1.6"
description = "Suckless second-brain CLI tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Benjamin Hammond" }]
requires-python = ">=3.11"
dependencies = ["rich>=13"]

[project.scripts]
org = "org.org:main"

[tool.setuptools.packages.find]
where = ["src"]
